<resources>
    <string name="app_name">MaltAAC</string>
    <string name="dropbox_upload_service">Dropbox Upload</string>
    <string name="profile_restore_service">Profile Restore</string>

    <!-- Hints -->
    <string name="search_hint">Find word…</string>
    <string name="category_hint">Category…</string>
    <string name="code_hint">Recovery Code</string>
    <string name="word_hint">Word…</string>
    <string name="profile_hint">Profile name…</string>
    <string name="root_hint">Root… (Optional)</string>

    <!-- Navigation Strings -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>

    <!-- Action bar menu strings -->
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_history">History</string>
    <string name="action_forgot_pin">Forgot Pin?</string>
    <string name="backspace">Backspace</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="lock_device_to_app">Set as Launcher</string>

    <!-- Add menu strings -->
    <string name="add_word">Add Word</string>
    <string name="add_category">Add Category</string>
    <string name="edit">Edit</string>

    <!-- General context menu strings -->
    <string name="show">Show</string>
    <string name="hide">Hide</string>

    <!-- Category context menu strings -->
    <string name="rename_category">Rename</string>
    <string name="change_category_image">Change Image</string>
    <string name="delete_category">Delete</string>

    <!-- Word context menu strings -->
    <string name="change_word">Change Word</string>
    <string name="change_category">Change Category</string>
    <string name="change_image">Change Image</string>
    <string name="change_sound">Change Sound</string>
    <string name="delete_word">Delete</string>

    <!-- Other strings -->
    <string name="select_image_from_gallery">Select image from gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="search_web">Select image from web</string>
    <string name="image">Image</string>
    <string name="sound">Sound</string>
    <string name="select_sound_from_device">Select sound from device</string>
    <string name="record_sound">Record sound</string>
    <string name="play_sound">Play sound</string>
    <string name="category">Category: </string>
    <string name="selected_image">Selected image</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="submit_code">Reset</string>
    <string name="delete_category_prompt">Are you sure you want to delete this category?</string>
    <string name="delete_word_prompt">Are you sure you want to delete this word?</string>
    <string name="welcome">Welcome!</string>
    <string name="preferences_prompt">Please select your preferences on the next screen</string>
    <string name="setting_up">Setting up…</string>
    <string name="pin_prompt">Please enter your security pin</string>
    <string name="pin_prompt_fingerprint">Please enter your security pin or use your fingerprint</string>
    <string name="profile">Profile</string>
    <string name="backup">Backup to Dropbox</string>
    <string name="restore">Restore from Dropbox</string>
    <string name="history">History</string>
    <string name="reset_pin">Reset Pin</string>
    <string name="view_recovery_code">Your Recovery Code</string>
    <string name="recovery_code">Recovery Code</string>
    <string name="recovery_code_desc">Store this code in a safe place. This code can be used only once. If you forget your PIN, you will lose access to your data.</string>
    <string name="update_predictions">Update predictions</string>
    <string name="clear_history">Clear history</string>
    <string name="generate_code">Generate code</string>
    <string name="no_history_to_show">No history to show…</string>
    <string name="updating_predictions">Updating predictions…</string>
    <string name="recording">Recording…</string>
    <string name="scrape_enter">Go</string>
    <string name="scrape_default_uri">https://www.google.com</string>
    <string name="use_this_image">Use this image</string>
    <string name="hidden_items">Show Hidden</string>
    <string name="words">Words</string>
    <string name="categories">Categories</string>
    <string name="select_all">Select All</string>
    <string name="database_error">Database Error</string>
    <string name="back">Back</string>
    <string name="no_words">Sorry, no words available</string>
    <string name="core_button">Core</string>
    <string name="home">Home</string>
    <string name="zoomed_image">Zoomed Image</string>
</resources>
