<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/change_sound_layout">

    <TextView
        android:id="@+id/recordingNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/fab_margin"
        android:gravity="center_horizontal"
        android:text="@string/recording"
        android:visibility="gone" />

    <LinearLayout
        android:paddingLeft="@dimen/fab_margin"
        android:paddingStart="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin"
        android:paddingEnd="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/general"
            android:textColor="@color/greyText"
            android:text="@string/sound"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/folderIcon"
            android:padding="@dimen/play_margin"
            android:layout_width="@dimen/smallImageButtonSize"
            android:layout_height="@dimen/smallImageButtonSize"
            android:contentDescription="@string/select_sound_from_device"
            app:srcCompat="@drawable/ic_folder" />

        <ImageView
            android:id="@+id/micIcon"
            android:padding="@dimen/play_margin"
            android:layout_width="@dimen/smallImageButtonSize"
            android:layout_height="@dimen/smallImageButtonSize"
            android:contentDescription="@string/record_sound"
            app:srcCompat="@drawable/ic_mic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginHorizontal="@dimen/fab_margin">

        <ImageView
            android:id="@+id/playIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/play_sound"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_play" />

        <TextView
            android:id="@+id/selectedAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:background="@color/lightGrey"
            android:textColor="@color/greyText"
            android:textSize="@dimen/general"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="@dimen/pageNo"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:background="#FFFFFF"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="@dimen/pageNo"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:background="#FFFFFF"/>
    </LinearLayout>

</LinearLayout>