<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="200dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:gravity="center"
        android:text="@string/reset_pin"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/pageNo" />

    <EditText
        android:id="@+id/codeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/code_hint"
        android:inputType="text"
        android:textColor="@color/greyText"
        android:textColorHighlight="@color/colorAccent"
        android:textColorHint="@color/greyText"
        android:textSize="@dimen/general" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/resetButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:text="@string/submit_code"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/pageNo" />
    </LinearLayout>

</LinearLayout>
